add ui for scoreboard

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
+    <div class="btn-container">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
+    </div>
+    <div class="display-container">
+        <p class="display">hello world</p>
+    </div>
+    <div>
+        <div>
+            <h1>Player score</h1>
+            <p class="player">0</p>
+        </div>
+        <div>
+            <h1>Computer score</h1>
+            <p class="computer">0</p>
+        </div>
     </div>
     <script src="scripts/main.js"></script>
 </body>
