add css to rps UI

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+    <div  class="scoreboard">
+        <div class="leftside">
+            <h1>Player score</h1>
+            <p class="player">0</p>
+        </div>
+        <div class="rightside">
+            <h1>Computer score</h1>
+            <p class="computer">0</p>
+        </div>
+    </div>
+    <div class="display-container">
+        <p class="display">hello world</p>
+    </div>
     <div class="btn-container">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    <div class="display-container">
-        <p class="display">hello world</p>
-    </div>
-    <div>
-        <div>
-            <h1>Player score</h1>
-            <p class="player">0</p>
-        </div>
-        <div>
-            <h1>Computer score</h1>
-            <p class="computer">0</p>
-        </div>
-    </div>
+
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
