add README.md and edit CSS

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div  class="scoreboard">
+  <head>
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RPS</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>Rock Paper Scissors</header>
+      <div class="scoreboard">
         <div class="leftside">
-            <h1>Player score</h1>
-            <p class="player">0</p>
+          <h1>Player score</h1>
+          <p class="player">0</p>
         </div>
         <div class="rightside">
-            <h1>Computer score</h1>
-            <p class="computer">0</p>
+          <h1>Computer score</h1>
+          <p class="computer">0</p>
         </div>
+      </div>
+      <div class="display-container">
+        <p class="display">Welcome to RPS</p>
+      </div>
+      <div class="rps-container">
+        <button class="rps" id="rock"></button>
+        <button class="rps" id="paper"></button>
+        <button class="rps" id="scissors"></button>
+      </div>
+      <button class="restart-btn">Restart</button>
     </div>
-    <div class="display-container">
-        <p class="display">hello world</p>
-    </div>
-    <div class="btn-container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
-    </div>
-
 
     <script src="scripts/main.js"></script>
-</body>
+  </body>
 </html>
